# The-Dining-Philosophers-Problem

./: CMakeLists.txt  README.md
src/: .gitignore  logger.cpp  logger.h  main.cpp  philosopher.cpp  philosopher.h  table.cpp  table.h
